    - Improved entry type determination and author parsing for some varieties of CSA files.
    - Minor change to Harvard RTF export. Added space after "ed.", and added editor to output for
      inbook entries.
    - Set limit to the number of displayed characters in group names in groups tree in order to
      avoid group panel width problems.
    - Changed file link handling so ftp:// and file:// links can be opened.
    - Modified Endnote/refer import filter to strip "doi:" from the %R field.
    - Fixed bug: switching entry editor between entries of different type may result in switching
      of entry editor tabs.
    - Fixed bug: adding external file link leads to relative path from root directory if file
      directory is set to an empty string.
    - Fixed error message when a # in a BibTeX string prevents saving. No longer states that the
      problem is in an entry, but specifies that it is in a string.
    - Fixed bug: ODS export doesn't resolve BibTeX strings.
    - Fixed bug: content selector for "editor" field uses "," instead of " and " as delimiter.
    - Fixed bug: editing source doesn't allow change of entry type.
    - RTFChars formatter now converts --- to \emdash and -- to \endash.

2.6b
    - Added pages information to several entry types in Endnote export.
    - Modified LastPage formatter so it returns the number when only the number of pages is given.
    - Modified search algorithms so LaTeX commands are removed before search. For instance, this
      means that the value "test \textit{case}" now matches the search string "test case".
    - Changed default table font family to "SansSerif".
    - Can now create lock file while writing a bib file. The lock file is checked before
      saving, and before scanning an externally changed file, in order to avoid reading an
      unfinished file.
    - Added support for dragging a file link from the file column to another application.